--- a/src/pages/Profile/Profile.module.scss
+++ b/src/pages/Profile/Profile.module.scss
@@ -1,6 +1,6 @@
 .content{
   grid-area: c;
-  background-color: #07B568;
+  background-color: #dbd8b8;
   img{
     width: 100%;
     height: 200px;
