--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -4,10 +4,20 @@
   grid-area: n;
   background-color: #07B568;
   grid-template-rows: 40px 40px 40px 40px 80px;
-  a{
+  padding: 20px;
+  div {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    color: white;
+    align-items: center;
+    a{
+      text-decoration: none;
+      color: white;
+
+    }
+  }
+
+
+
+  .active {
+    color: gold;
   }
 }
