--- a/src/pages/Dialogs/Dialogs.module.scss
+++ b/src/pages/Dialogs/Dialogs.module.scss
@@ -1,3 +1,24 @@
 .dialogs {
   background-color: #dbd8b8;
+  display: grid;
+  grid-template-columns: 2fr 10fr;
+
+  .dialogs_items {
+    padding: 10px;
+
+    .dialog {
+
+    }
+    .active {
+      color: red;
+    }
+  }
+
+  .messages {
+    padding: 10px;
+
+    .message {
+
+    }
+  }
 }
