--- a/src/pages/Profile/MyPosts/Post/Post.module.scss
+++ b/src/pages/Profile/MyPosts/Post/Post.module.scss
@@ -1,7 +1,25 @@
- .post{
-    img{
-      width: 50px;
-      height: 50px;
-      border-radius: 50px;
-    }
- }
+.post {
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  grid-template-columns: 1fr 6fr;
+  grid-template-areas:
+            "i m"
+            "i l";
+
+  img {
+    grid-area: i;
+    width: 50px;
+    height: 50px;
+    border-radius: 50px;
+  }
+
+  .message {
+    grid-area: m;
+    display: grid;
+    align-items: center;
+  }
+
+  .like{
+    grid-area: l;
+  }
+}
