--- a/src/pages/Profile/MyPosts/MyPosts.module.scss
+++ b/src/pages/Profile/MyPosts/MyPosts.module.scss
@@ -1,8 +1,8 @@
 .all_posts {
   display: grid;
   grid-gap: 10px;
-  margin: 10px;
   width: 500px;
+  padding: 10px;
   .new_post {
     display: flex;
     flex-direction: column;
