navbar friends props

--- a/src/pages/Profile/MyPosts/Post/Post.module.scss
+++ b/src/pages/Profile/MyPosts/Post/Post.module.scss
@@ -1,5 +1,6 @@
 .post {
   display: grid;
+  grid-gap: 5px;
   grid-template-rows: 1fr 1fr;
   grid-template-columns: 1fr 6fr;
   grid-template-areas:
@@ -20,6 +21,9 @@
   }
 
   .like{
+    //display: grid;
+    //grid-template-columns: 1fr 1fr;
+    //grid-gap: 10px;
     grid-area: l;
   }
 }
