--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -1,21 +1,20 @@
-.nav{
+.nav {
   display: grid;
   grid-column: auto;
   grid-area: n;
   background-color: #07B568;
-  grid-template-rows: 40px 40px 40px 40px 80px;
+  grid-template-rows: 40px 40px 40px 40px 90px 90px;
   padding: 20px;
-  div {
+
+  .navLink {
     display: flex;
     align-items: center;
-    a{
+
+    a {
       text-decoration: none;
       color: white;
-
     }
   }
-
-
 
   .active {
     color: gold;
