err: type string -> number

--- a/src/pages/Dialogs/Dialogs.module.scss
+++ b/src/pages/Dialogs/Dialogs.module.scss
@@ -32,7 +32,7 @@
     grid-template-areas:  "t t"
                           ". b";
     grid-template-rows: 1fr 1fr;
-    grid-template-columns: 1fr 100px;
+    grid-template-columns: 10fr 1fr;
     grid-gap: 10px;
     padding: 10px;
     textarea{
@@ -40,7 +40,6 @@
     }
     button{
       grid-area: b;
-      width: 100px;
     }
   }
 
