--- a/src/pages/Dialogs/Dialogs.module.scss
+++ b/src/pages/Dialogs/Dialogs.module.scss
@@ -1,6 +1,7 @@
 .dialogs {
   background-color: #dbd8b8;
   display: grid;
+  height: 95%;
   grid-template-areas: "a b"
                         ". c";
   grid-template-columns: 2fr 10fr;
